--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--Aqui teremos um article versiculos biblicos por API-->
     
         <div id="versiculo-container">
-            <h3>Versiculo do dia:</h3>
+            <h3 id="texto-versiculo">Versiculo do dia:</h3>
             <p id="texto-versiculo"> </p>
             <p id="referencia-versiculo"></p>
         </div>
