--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
     <br><br><br><br><br><br>
     <!--Aqui teremos um footer-->
-    <footer id="index-footer" class="rodape">
+    <footer class="rodape">
         <div class="rodape-grid">
           <div>
             <p>
